--- a/Client/src/app/components/customer/customer-nav-bar/customer-nav-bar.html
+++ b/Client/src/app/components/customer/customer-nav-bar/customer-nav-bar.html
@@ -2,8 +2,9 @@
   <div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center w-100">
       <a [routerLink]="['/home']" class="d-flex align-items-center gap-2 text-decoration-none">
-        <img src="./favicon.png" width="48" height="48" alt="Salahly logo" />
-        <span class="text-secondary fs-3 fst-italic">{{ 'BlankNavBar.Salahly' | translate }}</span>
+        <!-- <img src="./favicon.png" width="48" height="48" alt="Salahly logo" /> -->
+        <img [src]="logoSrc"  height="50" alt="Salahly logo" />
+        <!-- <span class="text-secondary fs-3 fst-italic">{{ 'BlankNavBar.Salahly' | translate }}</span> -->
       </a>
 
       <div class="d-none d-md-flex align-items-center gap-4">
