--- a/Client/src/app/components/shared/footer/footer.html
+++ b/Client/src/app/components/shared/footer/footer.html
@@ -4,8 +4,9 @@
       <!-- Brand -->
       <div class="col-12 col-md-3">
         <div class="d-flex align-items-center gap-2 mb-3">
-          <img src="./favicon.png" width="50" height="50" alt="">
-          <span class="text-white fs-3 fst-italic">{{ 'Footer.Salahly' | translate }}</span>
+          <!-- <img src="./favicon.png" width="50" height="50" alt=""> -->
+           <img [src]="logoSrc"  height="70" alt="Salahly logo" style="border-radius: 10px;" />
+          <!-- <span class="text-white fs-3 fst-italic">{{ 'Footer.Salahly' | translate }}</span> -->
         </div>
         <p class="small text-secondary mb-0">
           {{ 'Footer.Connecting customers with trusted service providers across Egypt.' | translate }}
