--- a/Client/src/app/components/technician/technician-portfolio-modal/technician-portfolio-modal.css
+++ b/Client/src/app/components/technician/technician-portfolio-modal/technician-portfolio-modal.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   padding: 2.5rem 1.5rem 1.5rem;
-  z-index: 1000;
+  z-index: 10000;
 }
 
 .modal-content {
@@ -19,7 +19,9 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+  min-height: 400px;
   box-shadow: 0 25px 45px rgba(15, 23, 42, 0.25);
+  /* overflow-y: scroll; */
 }
 
 .modal-header {
